마지막 프로젝트/개발 코드/kubernetes/kubernetes/aws_front/webpage_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpage-service-nodeport
spec:
  type: NodePort
  selector:
    app: webpage-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
