마지막 프로젝트/개발 코드/kubernetes/kubernetes/aws_front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bmoingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:056332668609:certificate/ba182948-1a29-4aa4-b6a0-033508620d33
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webpage-service-nodeport
                port:
                  number: 80
